--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 .mb filter=lfs diff=lfs merge=lfs -text
 .ssb filter=lfs diff=lfs merge=lfs -text
 .hipnc filter=lfs diff=lfs merge=lfs -text
+.spp filter=lfs diff=lfs merge=lfs -text
