--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 .ssb filter=lfs diff=lfs merge=lfs -text
 .hipnc filter=lfs diff=lfs merge=lfs -text
 .spp filter=lfs diff=lfs merge=lfs -text
+.ma filter=lfs diff=lfs merge=lfs -text
+.jpg filter=lfs diff=lfs merge=lfs -text
+.obj filter=lfs diff=lfs merge=lfs -text
