--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 .ma filter=lfs diff=lfs merge=lfs -text
 .jpg filter=lfs diff=lfs merge=lfs -text
 .obj filter=lfs diff=lfs merge=lfs -text
+.mtl filter=lfs diff=lfs merge=lfs -text
